--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,9 +1,12 @@
 .header {
     grid-area: h;
-    background-color: aqua;
+    background-color: #1e231d;
   }
-  
+  .img_icon {
+    margin-left: 15px;
+  }
   .header img {
-    width: 40px;
+    width: 60px;
+    height: 60px;
   }
 
