--- a/src/Components/Navbar/Nav.module.css
+++ b/src/Components/Navbar/Nav.module.css
@@ -1,6 +1,11 @@
+ul {
+  padding-inline-start: 0;
+}
+.navBar {
+  grid-area: n;
+  background-color: #424a3f;
+}
 .nav {
-    grid-area: n;
-    background-color: #424a3f;
     padding: 30px;
   }
 .item a {
@@ -11,4 +16,30 @@
 }
 .item a.activeLink {
   color: #787578;
+}
+.sign {
+  margin-left: 45px;
+  color: #f9fbf8;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+/* .itemfriend {
+
+} */
+.itemfriend a {
+  list-style-type: none;
+  text-decoration: none;
+  color: #f9fbf8;
+  
+}
+.listFriends li{
+  display: inline-block;
+  width: auto;
+  margin: 7px;
+
+}
+.imgfriend {
+  width: 45px;
+  height: 45px;
+  border-radius: 25px;
 }
