--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -9,4 +9,11 @@
     width: 60px;
     height: 60px;
   }
-
+  .login {
+    float: right;
+    color: white;
+    margin: 15px;
+  }
+  .login a {
+  color:white ;
+ }
